@@ -11,8 +11,8 @@ android {
         applicationId "com.tycho.app.primenumberfinder"
         minSdkVersion 21
         targetSdkVersion 27
-        versionCode 15
-        versionName "1.3.2.DEV"
+        versionCode 16
+        versionName "1.3.2"
     }
     buildTypes {
         release {
