@@ -9,6 +9,10 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/Default.NoActionBar">
+
+        <!-- Disable automatic analytics-->
+        <meta-data android:name="firebase_crashlytics_collection_enabled" android:value="false" />
+
         <activity
             android:name=".activities.MainActivity"
             android:label="@string/app_name"
