@@ -1,10 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <CheckBoxPreference
-        android:defaultValue="false"
-        android:key="allowBackgroundThreads"
-        android:summary="@string/preference_summary_allow_background_threads"
-        android:title="@string/preference_title_allow_background_threads"/>
+    <PreferenceCategory
+        android:title="@string/general">
+
+        <CheckBoxPreference
+            android:defaultValue="false"
+            android:key="allowBackgroundThreads"
+            android:summary="@string/preference_summary_allow_background_threads"
+            android:title="@string/preference_title_allow_background_threads"/>
+
+    </PreferenceCategory>
+
+    <PreferenceCategory
+        android:title="@string/privacy">
+
+        <CheckBoxPreference
+            android:defaultValue="true"
+            android:key="allowAnalytics"
+            android:summary="@string/allow_analytics_description"
+            android:title="@string/allow_analytics_title"/>
+
+    </PreferenceCategory>
 
 </PreferenceScreen>
