@@ -95,3 +95,7 @@
 - Fixed a bug that sometimes caused the application to crash after resuming
 - Fixed a bug that caused the app to crash when arabic characters were used
 - Minor UI bug fix
+
+04/26/2018 > Prime Number Finder version 1.3.2
+- Fixed a bug that sometimes caused paused tasks to resume when switching activities.
+- Added setting to allow collection of anonymous crash logs
